# distributed-audit-blockchain

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.json  stop_nodes.sh  test_block_recovery.sh
client/: audit_client.py  blockchain_client.py  generate_proto.py
include/: block_manager.h  blockchain_service.h  config.h  crypto_utils.h  file_audit_service.h  mempool.h  node.h
proto/: block_chain.proto  common.proto  file_audit.proto
src/: block_manager.cc  blockchain_service.cc  config.cc  crypto_utils.cc  file_audit_service.cc  main.cc  mempool.cc  node.cc
